syntax = "proto3";

option java_multiple_files = true;
option java_package = "ekka.srv.api.message";
option java_outer_classname = "MessageServiceProto";

// The service definition.
service MessageService {
    rpc SendMessage (MessageRequest) returns (MessageReply) {}
}

// The request message
message MessageRequest {
    string id = 1;
    string remote = 2;
    int32 messageType = 3;
    bytes messagePayload = 4;
}

// The response message
message MessageReply {
    string id = 1;
    string remote = 2;
    int32 messageType = 3;
    bytes messagePayload = 4;
}
